# convdrift

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.local.json
scripts/: statusline.sh
src/convdrift/: __init__.py  _utils.py  cli.py  config.py  formatting.py  history.py  metrics.py  models.py  parser.py  scoring.py  segmenter.py  statusline.py  store.py
tests/: test_segment.py  test_stage1.py  test_stage2.py  test_stage3.py
tests/fixtures/: sample_transcript.jsonl  stage1_bad_transcript.jsonl  stage1_good_transcript.jsonl  stage2_repetitive_transcript.jsonl
