[project]
name = "convdrift"
version = "0.1.0"
description = "Session stagnation and looping detection for human-LLM coding sessions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.16.0",
  "watchfiles>=1.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.11.0",
]

[project.scripts]
convdrift = "convdrift.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/convdrift"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
